<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/background">

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/homeBtn"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/homebtn"
        android:src="@drawable/baseline_home_24"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultTv"
        android:layout_centerHorizontal="true"
        android:text="@string/winner"
        android:textSize="40sp"
        android:textColor="@color/text"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text"
        android:textColor="@color/background"
        android:id="@+id/playAgainBtn"
        android:text="@string/play_again"
        android:textSize="30sp"
        android:layout_below="@id/resultTv"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>